--- a/VN2Anki/SettingsWindow.xaml
+++ b/VN2Anki/SettingsWindow.xaml
@@ -42,6 +42,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -85,7 +86,16 @@
                         <ComboBoxItem Content="Español" Tag="es-ES"/>
                     </ComboBox>
 
-                    <CheckBox x:Name="ChkOpenSettings" Content="{x:Static loc:Strings.LblOpenSettingsOnStartup}" Foreground="White" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" VerticalAlignment="Center" Checked="ChkOpenSettings_Checked"/>
+                    <TextBlock Text="Qualidade da Imagem:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
+                    <ComboBox x:Name="ComboImageRes" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2">
+                        <ComboBoxItem Content="Tamanho Original" Tag="0"/>
+                        <ComboBoxItem Content="1920px (FHD)" Tag="1920"/>
+                        <ComboBoxItem Content="1280px (HD)" Tag="1280"/>
+                        <ComboBoxItem Content="720px (SD)" Tag="720"/>
+                        <ComboBoxItem Content="360px (SD)" Tag="360"/>
+                    </ComboBox>
+
+                    <CheckBox x:Name="ChkOpenSettings" Content="{x:Static loc:Strings.LblOpenSettingsOnStartup}" Foreground="White" Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" VerticalAlignment="Center" Checked="ChkOpenSettings_Checked"/>
                 </Grid>
             </GroupBox>
 
