--- a/VN2Anki/SettingsWindow.xaml
+++ b/VN2Anki/SettingsWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:loc="clr-namespace:VN2Anki.Locales"
-        Title="Configurações - VN Miner" Height="560" Width="550"
+        Title="{x:Static loc:Strings.LblSettingsWindow}" Height="560" Width="550"
         Background="#252526" Foreground="White" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
 
     <Window.Resources>
@@ -126,14 +126,14 @@
 
                         <CheckBox x:Name="ChkDynamicTimeout" Content="{x:Static loc:Strings.LblDynamicTimeout}" Foreground="White" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" VerticalAlignment="Center"/>
 
-                        <TextBlock Text="Idioma / Language:" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
+                        <TextBlock Text="{x:Static loc:Strings.LblLanguage}" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboLanguage" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" SelectionChanged="ComboLanguage_SelectionChanged">
-                            <ComboBoxItem Content="Português" Tag="pt-BR"/>
                             <ComboBoxItem Content="English" Tag="en-US"/>
                             <ComboBoxItem Content="Español" Tag="es-ES"/>
+                            <ComboBoxItem Content="Português" Tag="pt-BR"/>
                         </ComboBox>
 
-                        <TextBlock Text="Qualidade de Imagem:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
+                        <TextBlock Text="{x:Static loc:Strings.LblImageQuality}" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboImageRes" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2">
                             <ComboBoxItem Content="Tamanho Original" Tag="0"/>
                             <ComboBoxItem Content="1080p (FHD)" Tag="1920"/>
@@ -142,12 +142,12 @@
                             <ComboBoxItem Content="360p (LD)" Tag="640"/>
                         </ComboBox>
 
-                        <TextBlock Text="Qualidade de Áudio:" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
+                        <TextBlock Text="{x:Static loc:Strings.LblAudioQuality}" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboAudioRes" Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2">
-                            <ComboBoxItem Content="WAV (Original sem compressão)" Tag="0"/>
-                            <ComboBoxItem Content="MP3 192 kbps (Alta Qualidade)" Tag="192"/>
-                            <ComboBoxItem Content="MP3 128 kbps (Padrão)" Tag="128"/>
-                            <ComboBoxItem Content="MP3 64 kbps (Voz Leve)" Tag="64"/>
+                            <ComboBoxItem Content="WAV (original)" Tag="0"/>
+                            <ComboBoxItem Content="MP3 192 kbps (HQ)" Tag="192"/>
+                            <ComboBoxItem Content="MP3 128 kbps (Default)" Tag="128"/>
+                            <ComboBoxItem Content="MP3 64 kbps (LQ)" Tag="64"/>
                         </ComboBox>
 
                         <CheckBox x:Name="ChkOpenSettings" Content="{x:Static loc:Strings.LblOpenSettingsOnStartup}" Foreground="White" Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" Margin="5,15,5,5" VerticalAlignment="Center" Checked="ChkOpenSettings_Checked"/>
@@ -186,7 +186,7 @@
                         <TextBlock Text="AnkiConnect URL:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <TextBox x:Name="TxtAnkiUrl" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"/>
 
-                        <TextBlock Text="Timeout (segundos):" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
+                        <TextBlock Text="{x:Static loc:Strings.LblTimeout}" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <TextBox x:Name="TxtAnkiTimeout" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"/>
                     </Grid>
                 </TabItem>
