--- a/VN2Anki/SettingsWindow.xaml
+++ b/VN2Anki/SettingsWindow.xaml
@@ -99,11 +99,22 @@
 
                         <TextBlock Text="{x:Static loc:Strings.LblAudioSource}" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboAudio" Grid.Row="0" Grid.Column="1" DisplayMemberPath="DisplayName"/>
-                        <Button Content="🔄" Grid.Row="0" Grid.Column="2" Width="35" Click="BtnRefreshAudio_Click"/>
-
+                        <Button Grid.Row="0" Grid.Column="2" Width="35" Height="35" Click="BtnRefreshAudio_Click" Padding="0">
+                            <Viewbox Stretch="Uniform">
+                                <Canvas Width="24" Height="24" Margin="4">
+                                    <Path Fill="White" Data="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"/>
+                                </Canvas>
+                            </Viewbox>
+                        </Button>
                         <TextBlock Text="{x:Static loc:Strings.LblVideoSource}" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboVideo" Grid.Row="1" Grid.Column="1" DisplayMemberPath="DisplayName" SelectedValuePath="ProcessName"/>
-                        <Button Content="🔄" Grid.Row="1" Grid.Column="2" Width="35" Click="BtnRefreshVideo_Click"/>
+                        <Button Grid.Row="1" Grid.Column="2" Width="35" Height="35" Click="BtnRefreshVideo_Click" Padding="0">
+                            <Viewbox Stretch="Uniform">
+                                <Canvas Width="24" Height="24" Margin="4">
+                                    <Path Fill="White" Data="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"/>
+                                </Canvas>
+                            </Viewbox>
+                        </Button>
 
                         <TextBlock Text="{x:Static loc:Strings.LblSlotLimit}" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <TextBox x:Name="TxtMaxSlots" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"/>
@@ -172,7 +183,13 @@
 
                         <TextBlock Text="{x:Static loc:Strings.LblDeck}" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboDeck" Grid.Row="0" Grid.Column="1"/>
-                        <Button Content="🔄" Grid.Row="0" Grid.Column="2" Width="35" Click="BtnRefreshAnki_Click"/>
+                        <Button Grid.Row="0" Grid.Column="2" Width="35" Height="35" Padding="0" Click="BtnRefreshAnki_Click">
+                            <Viewbox Stretch="Uniform">
+                                <Canvas Width="24" Height="24" Margin="4">
+                                    <Path Fill="White" Data="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"/>
+                                </Canvas>
+                            </Viewbox>
+                        </Button>
 
                         <TextBlock Text="{x:Static loc:Strings.LblNoteType}" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" FontWeight="Normal"/>
                         <ComboBox x:Name="ComboModel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" SelectionChanged="ComboModel_SelectionChanged"/>
