--- a/VN2Anki/MainWindow.xaml
+++ b/VN2Anki/MainWindow.xaml
@@ -35,20 +35,20 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0" HorizontalAlignment="Left">
-                    <TextBlock Text="{Binding Elapsed, StringFormat=hh\\:mm\\:ss}" FontSize="22" FontWeight="Black" Foreground="White" Margin="0,0,0,-4"/>
+                    <TextBlock Text="{Binding Tracker.Elapsed, StringFormat=hh\\:mm\\:ss}" FontSize="22" FontWeight="Black" Foreground="White" Margin="0,0,0,-4"/>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding ValidCharacterCount}" FontSize="20" FontWeight="Black" Foreground="White"/>
+                        <TextBlock Text="{Binding Tracker.ValidCharacterCount}" FontSize="20" FontWeight="Black" Foreground="White"/>
                         <TextBlock Text=" char" FontSize="16" Foreground="#AAAAAA" VerticalAlignment="Bottom" Margin="2,0,0,4"/>
                     </StackPanel>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,5,0,0">
-                    <TextBlock Text="{Binding SpeedCharsPerHour}" FontSize="18" FontWeight="Black" Foreground="White" HorizontalAlignment="Right"/>
+                    <TextBlock Text="{Binding Tracker.SpeedCharsPerHour}" FontSize="18" FontWeight="Black" Foreground="White" HorizontalAlignment="Right"/>
                     <TextBlock Text="char/h" FontSize="14" Foreground="#AAAAAA" HorizontalAlignment="Right" Margin="0,-2,0,0"/>
                 </StackPanel>
-            </Grid> 
+            </Grid>
 
-            <TextBlock x:Name="TxtStatus" Grid.Row="2" Foreground="#AAAAAA" FontSize="10" HorizontalAlignment="Center" Margin="5,0,5,2" MaxWidth="250" TextTrimming="CharacterEllipsis" Visibility="Collapsed"/>
+            <TextBlock x:Name="TxtStatus" Grid.Row="2" Foreground="#AAAAAA" FontSize="10" HorizontalAlignment="Center" Margin="5,0,5,2" MaxWidth="250" TextTrimming="CharacterEllipsis" Text="{Binding StatusText}" Visibility="{Binding StatusVisibility}"/>
 
             <Grid Grid.Row="3" Margin="5">
                 <Grid.ColumnDefinitions>
