--- a/VN2Anki/MainWindow.xaml
+++ b/VN2Anki/MainWindow.xaml
@@ -56,6 +56,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
@@ -65,7 +66,7 @@
                 <Button x:Name="BtnMiniQuickAdd" Content="ADD" Background="#FF12A0DC" Grid.Column="2" Margin="2" Padding="10,5,10,5" FontWeight="Bold" Foreground="White" BorderThickness="0" Click="BtnMiniQuickAdd_Click" ToolTip="Update with current sentence"/>
                 <Button x:Name="BtnMiniList" Content="LIST" Background="#FF642EC8" Grid.Column="3" Margin="2" Padding="8,5" FontWeight="Bold" Foreground="White" BorderThickness="0" Click="BtnOpenHistory_Click" ToolTip="History"/>
 
-                <Button  Background="#FF929292" Grid.Column="4" Margin="2" BorderThickness="0" Foreground="White" Click="BtnToggleStats_Click" ToolTip="Toggle Stats">
+                <Button  Background="#FF929292" Grid.Column="5" Margin="2" BorderThickness="0" Foreground="White" Click="BtnToggleStats_Click" ToolTip="Toggle Stats">
                     <Viewbox Width="16" Height="16">
                         <Path Fill="White">
                             <Path.Data>
@@ -80,12 +81,14 @@
                     </Viewbox>
                 </Button>
 
-
-
-                <Button Background="#FF929292" Grid.Column="5" Margin="2" BorderThickness="0" Foreground="White" Click="BtnOpenSettings_Click" ToolTip="Settings">
+                <Button Background="#FF929292" Grid.Column="6" Margin="2" BorderThickness="0" Foreground="White" Click="BtnOpenSettings_Click" ToolTip="Settings">
                 <Viewbox Width="16" Height="16">
                     <Path Fill="White" Data="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.06-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.73,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.36,4.8,11.69,4.8,12s0.02,0.64,0.06,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.49-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/>
                 </Viewbox>
+                </Button>
+
+                <Button Background="#FF929292" Grid.Column="4" Margin="2" BorderThickness="0" Foreground="White" Click="BtnOpenOverlay_Click" ToolTip="Open Overlay">
+                    <TextBlock Text="OVER" FontWeight="Bold"/>
                 </Button>
             </Grid>
         </Grid>
